--- a/package.json
+++ b/package.json
@@ -26,19 +26,24 @@
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "juice": "^11.0.0",
     "mongoose": "^8.7.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "tailwindcss": "^3.4.15",
     "tiny-secp256k1": "^2.2.3",
     "validator": "^13.12.0"
   },
   "scripts": {
     "compile": "tsc",
-    "copy:views": "copyfiles -u 1 src/views/**/* dist",
-    "dev": "npm run compile && node ./dist/app.js"
+    "dev": "nodemon && bun run copy:views && bun run tailwind",
+    "copy:views": "cpx \"src/views/**/*.{html,jpg,png}\" dist/views",
+    "tailwind": "npx tailwindcss -i ./src/views/css/tailwind.css -o ./dist/views/css/tailwind.css --minify"
   },
   "devDependencies": {
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.9.1",
+    "cpx": "^1.5.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
